--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ body {
 }
 
 .cinema-top-scifi-movies-films {
-	height: 360px;
 	overflow-y: hidden;
 	overflow-x: scroll;
 	white-space: nowrap;
@@ -76,6 +75,48 @@ body {
 	margin-bottom: 10px;
 	align-items: center;
 }
+.tooltip {
+	position: relative;
+
+  }
+  .tootltip-wrapper{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 70px;
+
+}
+	
+.tooltip .tooltiptext {
+	visibility: hidden;
+    width: 400px;
+    height: 303px;
+    background-color: white;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+	z-index: 1;
+	outline: 5px solid yellow;
+	box-shadow:inset 0 0 10px #000000;
+	left: 228px;
+	border-radius: 5px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-image: linear-gradient(
+		rgba(0, 0, 0, 0.8),
+		rgba(0, 0, 0, 0.6)
+	  ), url("https://images-1.wuaki.tv/system/shots/193150/original/snapshot-1590662836-width1920-quality80.jpeg");
+	  white-space: normal;
+}
+.tootltip-title{
+	margin-bottom: 10px;
+}
+
+  
+  .tooltip:hover .tooltiptext {
+	visibility: visible;
+  }
 
 .cinema-documentaries-text > h3 {
 	color: white;
@@ -89,7 +130,6 @@ body {
 }
 
 .cinema-documentaries-films {
-	height: 360px;
 	overflow-y: hidden;
 	overflow-x: scroll;
 	white-space: nowrap;
