--- a/style.css
+++ b/style.css
@@ -94,13 +94,13 @@ body {
     width: 400px;
     height: 303px;
     background-color: white;
-    color: #fff;
+	color: #fff;
+	border-radius: 5px;
     text-align: center;
     position: absolute;
 	z-index: 1;
-	outline: 5px solid yellow;
 	box-shadow:inset 0 0 10px #000000;
-	left: 228px;
+	left: 222px;
 	border-radius: 5px;
 	background-repeat: no-repeat;
 	background-size: cover;
