--- a/detail/detail-final.css
+++ b/detail/detail-final.css
@@ -5,15 +5,14 @@
 }
 
 /* header */
-header {
-  z-index: 999;
-}
+
 
 .top-nav {
   background-color: black;
   position: fixed;
   width: 100%;
   top: 0px;
+  z-index: 1000;
 }
 
 .nav-items {
@@ -154,7 +153,6 @@ main {
   background-color: #f1f1f1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 100%;
 }
 
@@ -521,6 +519,12 @@ a:visited {
 .cover-film-info {
   bottom: 10%;
 }
+.visible-text{
+  color: black;
+}
+.sn-buttons p{
+  color: black;
+}
 
 @media screen and (max-width: 910px) {
   .film-info-container {
@@ -539,6 +543,7 @@ a:visited {
     flex-direction: row;
     align-items: center;
     height: 80px;
+    justify-content: center;
   }
 
   .film-data-resume {
