--- a/detail.css
+++ b/detail.css
@@ -2,139 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-/* header */
-
-
-.top-nav {
-  background-color: black;
-  position: fixed;
-  width: 100%;
-  top: 0px;
-  z-index: 1000;
-}
-
-.nav-items {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  color: white;
-  height: 60px;
-  font-family: "Noto Sans", sans-serif;
-  font-size: 14px;
-}
-
-.nav-logo {
-  width: 140px;
-  height: auto;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-items-menu,
-.nav-items-user {
-  display: flex;
-  align-items: center;
-}
-
-.nav-items-menu > div,
-.nav-items-user > div {
-  margin: 0 10px;
-}
-
-.nav-search {
-  display: flex;
-  background-color: #333333;
-  flex-direction: row;
-  height: 40px;
-  align-items: center;
-  color: #999;
-  border-radius: 2px;
-}
-
-input {
-  background-color: #333333;
-  height: -webkit-fill-available;
-  border: none;
-  width: 270px;
-  font-size: 16px;
-}
-.nav-search > div {
-  height: 40px;
-  padding-left: 10px;
-}
-.search-icon {
-  padding-top: 8px;
-}
-.nav-option {
-  display: flex;
-}
-.nav-option > div {
-  margin: 0 4px;
-}
-.nav-register {
-  height: 40px;
-  display: flex;
-  align-items: center;
-  background-color: #ffe300;
-  color: black;
-  border-radius: 2px;
-  padding: 12px;
-}
-div.slider-wrapper {
-  background-color: black;
-}
-
-.main-image img {
-  height: auto;
-  width: 100%;
-  margin-top: 60px;
-  margin-bottom: 30px;
-}
-
-.mobile {
-  display: none;
-}
-
-.boxes img {
-  width: 230px;
-  height: auto;
-}
-.movies-row-fixed {
-  display: flex;
-  background-color: black;
-  overflow-x: auto;
-}
-
-.movies-row-fixed a {
-  text-align: center;
-  margin: 0 10px;
-}
-
-header {
-  width: 100%;
-}
-
-.movies-row-fixed::-webkit-scrollbar {
-  width: 0;
-}
-
-input:focus {
-  outline: none;
-}
-
-.nav-hover:hover {
-  color: yellow;
-  cursor: pointer;
-}
-
-.search-hover:hover {
-  background-color: white;
-}
-
-/* main */
-
+} 
 main {
   background-color: #f1f1f1;
 }
@@ -557,20 +425,11 @@ a:visited {
     width: 90%;
   }
 
-  .button-text p {
+  .button-text p, .cover-score-container, .cover-icons p {
     display: none;
   }
-
-  .cover-score-container {
-    display: none;
-  }
-
   .cover-film-title {
     font-size: 30px;
-  }
-
-  .cover-icons p {
-    display: none;
   }
 }
 @media screen and (max-width: 600px) {
@@ -580,6 +439,9 @@ a:visited {
   .cover-film-info{
     bottom: 3%;
   }
+  .science-fiction{
+    display: none;
+  }
 }
 @media screen and (max-width: 700px) {
   table{
@@ -588,47 +450,6 @@ a:visited {
 }
 
 @media only screen and (max-width: 1024px) {
-  /* HEADER */
-
-  .nav-option,
-  .nav-search,
-  .nav-help,
-  .nav-signin,
-  .nav-register {
-    display: none;
-  }
-
-  .mobile {
-    display: block;
-  }
-
-  .top-nav {
-    position: absolute;
-    background: linear-gradient(to bottom, black, transparent);
-  }
-
-  .movies-row-fixed {
-    display: flex;
-    overflow-x: auto;
-  }
-
-  .movies-row-fixed::-webkit-scrollbar {
-    width: 0;
-  }
-
-  .movies-row-fixed a {
-    text-align: center;
-    min-width: 225px;
-    line-height: 20px;
-    margin-right: 0 0px;
-  }
-
-  .main-image img {
-    margin-top: 0;
-    margin-bottom: 10px;
-  }
-
-  /* MAIN */
   .film-cover img {
     margin-top: 0;
   }
@@ -667,112 +488,27 @@ a:visited {
  * Author: Andre Firchow
  *
 *****************************************************************/
-.rect-auto,
-.c100.p51 .slice,
-.c100.p52 .slice,
-.c100.p53 .slice,
-.c100.p54 .slice,
-.c100.p55 .slice,
-.c100.p56 .slice,
-.c100.p57 .slice,
-.c100.p58 .slice,
-.c100.p59 .slice,
-.c100.p60 .slice,
-.c100.p61 .slice,
-.c100.p62 .slice,
-.c100.p63 .slice,
-.c100.p64 .slice,
-.c100.p65 .slice,
-.c100.p66 .slice,
-.c100.p67 .slice,
-.c100.p68 .slice,
-.c100.p69 .slice,
-.c100.p70 .slice,
-.c100.p71 .slice,
-.c100.p72 .slice,
-.c100.p73 .slice,
-.c100.p74 .slice,
-.c100.p75 .slice,
-.c100.p76 .slice,
-.c100.p77 .slice,
-.c100.p78 .slice,
-.c100.p79 .slice,
-.c100.p80 .slice,
-.c100.p81 .slice,
-.c100.p82 .slice,
-.c100.p83 .slice,
-.c100.p84 .slice,
-.c100.p85 .slice,
-.c100.p86 .slice,
-.c100.p87 .slice,
-.c100.p88 .slice,
-.c100.p89 .slice,
-.c100.p90 .slice,
-.c100.p91 .slice,
-.c100.p92 .slice,
-.c100.p93 .slice,
-.c100.p94 .slice,
-.c100.p95 .slice,
-.c100.p96 .slice,
-.c100.p97 .slice,
-.c100.p98 .slice,
-.c100.p99 .slice,
+
+rect-auto,
+.c100.p51 .slice, .c100.p52 .slice, .c100.p53 .slice, .c100.p54 .slice, .c100.p55 .slice, .c100.p56 .slice,
+.c100.p57 .slice,.c100.p58 .slice, .c100.p59 .slice, .c100.p60 .slice, .c100.p61 .slice, .c100.p62 .slice, .c100.p63 .slice,
+.c100.p64 .slice, .c100.p65 .slice, .c100.p66 .slice, .c100.p67 .slice, .c100.p68 .slice, .c100.p69 .slice, .c100.p70 .slice, 
+.c100.p71 .slice, .c100.p72 .slice, .c100.p73 .slice, .c100.p74 .slice, .c100.p75 .slice, .c100.p76 .slice, .c100.p77 .slice, .c100.p78 .slice,
+.c100.p79 .slice, .c100.p80 .slice, .c100.p81 .slice, .c100.p82 .slice, .c100.p83 .slice, .c100.p84 .slice, .c100.p85 .slice,
+.c100.p86 .slice, .c100.p87 .slice, .c100.p88 .slice, .c100.p89 .slice, .c100.p90 .slice, .c100.p91 .slice, .c100.p92 .slice,
+.c100.p93 .slice, .c100.p94 .slice, .c100.p95 .slice, .c100.p96 .slice, .c100.p97 .slice, .c100.p98 .slice, .c100.p99 .slice,
 .c100.p100 .slice {
   clip: rect(auto, auto, auto, auto);
 }
 
-.pie,
-.c100 .bar,
-.c100.p51 .fill,
-.c100.p52 .fill,
-.c100.p53 .fill,
-.c100.p54 .fill,
-.c100.p55 .fill,
-.c100.p56 .fill,
-.c100.p57 .fill,
-.c100.p58 .fill,
-.c100.p59 .fill,
-.c100.p60 .fill,
-.c100.p61 .fill,
-.c100.p62 .fill,
-.c100.p63 .fill,
-.c100.p64 .fill,
-.c100.p65 .fill,
-.c100.p66 .fill,
-.c100.p67 .fill,
-.c100.p68 .fill,
-.c100.p69 .fill,
-.c100.p70 .fill,
-.c100.p71 .fill,
-.c100.p72 .fill,
-.c100.p73 .fill,
-.c100.p74 .fill,
-.c100.p75 .fill,
-.c100.p76 .fill,
-.c100.p77 .fill,
-.c100.p78 .fill,
-.c100.p79 .fill,
-.c100.p80 .fill,
-.c100.p81 .fill,
-.c100.p82 .fill,
-.c100.p83 .fill,
-.c100.p84 .fill,
-.c100.p85 .fill,
-.c100.p86 .fill,
-.c100.p87 .fill,
-.c100.p88 .fill,
-.c100.p89 .fill,
-.c100.p90 .fill,
-.c100.p91 .fill,
-.c100.p92 .fill,
-.c100.p93 .fill,
-.c100.p94 .fill,
-.c100.p95 .fill,
-.c100.p96 .fill,
-.c100.p97 .fill,
-.c100.p98 .fill,
-.c100.p99 .fill,
-.c100.p100 .fill {
+.pie, .c100 .bar, .c100.p51 .fill, .c100.p52 .fill, .c100.p53 .fill, .c100.p54 .fill, .c100.p55 .fill, .c100.p56 .fill,
+.c100.p57 .fill, .c100.p58 .fill, .c100.p59 .fill, .c100.p60 .fill, .c100.p61 .fill, .c100.p62 .fill, .c100.p63 .fill,
+.c100.p64 .fill, .c100.p65 .fill, .c100.p66 .fill, .c100.p67 .fill, .c100.p68 .fill, .c100.p69 .fill, .c100.p70 .fill,
+.c100.p71 .fill, .c100.p72 .fill, .c100.p73 .fill, .c100.p74 .fill, .c100.p75 .fill, .c100.p76 .fill, .c100.p77 .fill,
+.c100.p78 .fill, .c100.p79 .fill, .c100.p80 .fill, .c100.p81 .fill, .c100.p82 .fill, .c100.p83 .fill, .c100.p84 .fill,
+.c100.p85 .fill, .c100.p86 .fill, .c100.p87 .fill, .c100.p88 .fill, .c100.p89 .fill, .c100.p90 .fill,.c100.p91 .fill,
+.c100.p92 .fill, .c100.p93 .fill, .c100.p94 .fill, .c100.p95 .fill, .c100.p96 .fill, .c100.p97 .fill, .c100.p98 .fill,
+.c100.p99 .fill, .c100.p100 .fill {
   position: absolute;
   border: 0.08em solid #307bbb;
   width: 0.84em;
@@ -790,107 +526,22 @@ a:visited {
   transform: rotate(0deg);
 }
 
-.pie-fill,
-.c100.p51 .bar:after,
-.c100.p51 .fill,
-.c100.p52 .bar:after,
-.c100.p52 .fill,
-.c100.p53 .bar:after,
-.c100.p53 .fill,
-.c100.p54 .bar:after,
-.c100.p54 .fill,
-.c100.p55 .bar:after,
-.c100.p55 .fill,
-.c100.p56 .bar:after,
-.c100.p56 .fill,
-.c100.p57 .bar:after,
-.c100.p57 .fill,
-.c100.p58 .bar:after,
-.c100.p58 .fill,
-.c100.p59 .bar:after,
-.c100.p59 .fill,
-.c100.p60 .bar:after,
-.c100.p60 .fill,
-.c100.p61 .bar:after,
-.c100.p61 .fill,
-.c100.p62 .bar:after,
-.c100.p62 .fill,
-.c100.p63 .bar:after,
-.c100.p63 .fill,
-.c100.p64 .bar:after,
-.c100.p64 .fill,
-.c100.p65 .bar:after,
-.c100.p65 .fill,
-.c100.p66 .bar:after,
-.c100.p66 .fill,
-.c100.p67 .bar:after,
-.c100.p67 .fill,
-.c100.p68 .bar:after,
-.c100.p68 .fill,
-.c100.p69 .bar:after,
-.c100.p69 .fill,
-.c100.p70 .bar:after,
-.c100.p70 .fill,
-.c100.p71 .bar:after,
-.c100.p71 .fill,
-.c100.p72 .bar:after,
-.c100.p72 .fill,
-.c100.p73 .bar:after,
-.c100.p73 .fill,
-.c100.p74 .bar:after,
-.c100.p74 .fill,
-.c100.p75 .bar:after,
-.c100.p75 .fill,
-.c100.p76 .bar:after,
-.c100.p76 .fill,
-.c100.p77 .bar:after,
-.c100.p77 .fill,
-.c100.p78 .bar:after,
-.c100.p78 .fill,
-.c100.p79 .bar:after,
-.c100.p79 .fill,
-.c100.p80 .bar:after,
-.c100.p80 .fill,
-.c100.p81 .bar:after,
-.c100.p81 .fill,
-.c100.p82 .bar:after,
-.c100.p82 .fill,
-.c100.p83 .bar:after,
-.c100.p83 .fill,
-.c100.p84 .bar:after,
-.c100.p84 .fill,
-.c100.p85 .bar:after,
-.c100.p85 .fill,
-.c100.p86 .bar:after,
-.c100.p86 .fill,
-.c100.p87 .bar:after,
-.c100.p87 .fill,
-.c100.p88 .bar:after,
-.c100.p88 .fill,
-.c100.p89 .bar:after,
-.c100.p89 .fill,
-.c100.p90 .bar:after,
-.c100.p90 .fill,
-.c100.p91 .bar:after,
-.c100.p91 .fill,
-.c100.p92 .bar:after,
-.c100.p92 .fill,
-.c100.p93 .bar:after,
-.c100.p93 .fill,
-.c100.p94 .bar:after,
-.c100.p94 .fill,
-.c100.p95 .bar:after,
-.c100.p95 .fill,
-.c100.p96 .bar:after,
-.c100.p96 .fill,
-.c100.p97 .bar:after,
-.c100.p97 .fill,
-.c100.p98 .bar:after,
-.c100.p98 .fill,
-.c100.p99 .bar:after,
-.c100.p99 .fill,
-.c100.p100 .bar:after,
-.c100.p100 .fill {
+.pie-fill, .c100.p51 .bar:after, .c100.p51 .fill, .c100.p52 .bar:after, .c100.p52 .fill, .c100.p53 .bar:after,
+.c100.p53 .fill, .c100.p54 .bar:after, .c100.p54 .fill, .c100.p55 .bar:after, .c100.p55 .fill, .c100.p56 .bar:after,
+.c100.p56 .fill, .c100.p57 .bar:after, .c100.p57 .fill, .c100.p58 .bar:after, .c100.p58 .fill, .c100.p59 .bar:after,
+.c100.p59 .fill, .c100.p60 .bar:after, .c100.p60 .fill, .c100.p61 .bar:after, .c100.p61 .fill, .c100.p62 .bar:after,
+.c100.p62 .fill, .c100.p63 .bar:after, .c100.p63 .fill, .c100.p64 .bar:after, .c100.p64 .fill, .c100.p65 .bar:after,
+.c100.p65 .fill, .c100.p66 .bar:after, .c100.p66 .fill, .c100.p67 .bar:after, .c100.p67 .fill, .c100.p68 .bar:after,
+.c100.p68 .fill, .c100.p69 .bar:after, .c100.p69 .fill, .c100.p70 .bar:after, .c100.p70 .fill, .c100.p71 .bar:after,
+.c100.p71 .fill, .c100.p72 .bar:after, .c100.p72 .fill, .c100.p73 .bar:after, .c100.p73 .fill, .c100.p74 .bar:after,
+.c100.p74 .fill, .c100.p75 .bar:after, .c100.p75 .fill, .c100.p76 .bar:after, .c100.p76 .fill, .c100.p77 .bar:after,
+.c100.p77 .fill, .c100.p78 .bar:after, .c100.p78 .fill, .c100.p79 .bar:after, .c100.p79 .fill, .c100.p80 .bar:after,
+.c100.p80 .fill, .c100.p81 .bar:after, .c100.p81 .fill, .c100.p82 .bar:after, .c100.p82 .fill, .c100.p83 .bar:after,
+.c100.p83 .fill, .c100.p84 .bar:after,.c100.p84 .fill, .c100.p85 .bar:after, .c100.p85 .fill, .c100.p86 .bar:after,
+.c100.p86 .fill, .c100.p87 .bar:after,.c100.p87 .fill, .c100.p88 .bar:after, .c100.p88 .fill, .c100.p89 .bar:after,
+.c100.p93 .bar:after, .c100.p93 .fill, .c100.p94 .bar:after, .c100.p94 .fill, .c100.p95 .bar:after, .c100.p95 .fill,
+.c100.p96 .bar:after, .c100.p96 .fill, .c100.p97 .bar:after, .c100.p97 .fill, .c100.p98 .bar:after, .c100.p98 .fill,
+.c100.p99 .bar:after, .c100.p99 .fill, .c100.p100 .bar:after, .c100.p100 .fill {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
@@ -912,9 +563,7 @@ a:visited {
   margin: 0 0.1em 0.1em 0;
   background-color: #cccccc;
 }
-.c100 *,
-.c100 *:before,
-.c100 *:after {
+.c100 *, .c100 *:before, .c100 *:after {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
